HBASE-26622 Update error-prone to 2.10